// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StateSwitch.test.js renders: loading with \`null\` 1`] = `
<img
  alt="Loading"
  height="16"
  src="images/loading16-dark.gif"
  width="16"
/>
`;

exports[`StateSwitch.test.js renders: loading with \`theme\` prop 1`] = `
<svg
  class="animate-spin"
  fill="none"
  style="width: 16px; height: 16px;"
  viewBox="0 0 24 24"
>
  <circle
    class="opacity-25"
    cx="12"
    cy="12"
    r="10"
    stroke="currentColor"
    stroke-width="4"
  />
   
  <path
    class="opacity-75"
    d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
    fill="currentColor"
  />
</svg>
`;

exports[`StateSwitch.test.js renders: loading with string 1`] = `
<svg
  class="animate-spin"
  fill="none"
  style="width: 16px; height: 16px;"
  viewBox="0 0 24 24"
>
  <circle
    class="opacity-25"
    cx="12"
    cy="12"
    r="10"
    stroke="currentColor"
    stroke-width="4"
  />
   
  <path
    class="opacity-75"
    d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
    fill="currentColor"
  />
</svg>
`;

exports[`StateSwitch.test.js renders: no with \`false\` 1`] = `
<img
  alt="No"
  height="16"
  src="images/no16.png"
  width="16"
/>
`;

exports[`StateSwitch.test.js renders: no with string 1`] = `
<img
  alt="No"
  height="16"
  src="images/no16.png"
  width="16"
/>
`;

exports[`StateSwitch.test.js renders: yes with \`true\` 1`] = `
<img
  alt="Yes"
  height="16"
  src="images/yes16.png"
  width="16"
/>
`;

exports[`StateSwitch.test.js renders: yes with string 1`] = `
<img
  alt="Yes"
  height="16"
  src="images/yes16.png"
  width="16"
/>
`;
